# predictive-maintenance-mlops

./: .gitignore  .mcp.json.example  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: README.md  settings.json
.claude/agents/: code-reviewer.md  data-engineer.md  docs-writer.md  experiment-analyst.md  gcp-architect.md  ml-trainer.md  mlops-pipeline-engineer.md  monitoring-engineer.md  security-auditor.md  test-author.md
.claude/commands/: deploy.md  evaluate.md  issue.md  review.md  ship.md  train.md
.claude/hooks/: block-coauthor.sh  format-python.sh  md-guard.sh  no-secrets.sh  protect-main.sh
.claude/skills/dvc-data-versioning/: SKILL.md
.claude/skills/experiment-logging/: SKILL.md
.claude/skills/model-card/: SKILL.md
.claude/skills/release-notes/: SKILL.md
.claude/skills/vertex-pipeline/: SKILL.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  chore.md  experiment.md  feature.md
.github/workflows/: ci.yml
configs/: README.md  data.yaml
docs/: PROJECT_BRIEF.md  architecture.md
examples/: load_fd001.py
src/features/: README.md  __init__.py  loader.py
tests/features/: test_loader.py
